[FIX] Arreglando configuracion de conexion de Nginx

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,14 +4,11 @@ server{
     root /appdata/www/public;
 
     location / {
-        try_files $uri @rewriteapp;
+        try_files $uri $uri/ =404;
+
     }
 
-    location @rewriteapp {
-        rewrite ^(.*)$ /index.php/$1 last;
-    }
-
-    location ~ ^/index\.php(/|$) {
+    location ~ \.php$ {
         fastcgi_pass docker-php-fmp:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
