--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,6 +2,7 @@ server{
     listen 80;
     server_name localhost;
     root /appdata/www/public;
+    index index.php;
 
     location / {
         try_files $uri $uri/ =404;
