--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -16,7 +16,9 @@ server{
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
     }
-
+    location ~ /\.ht {
+        deny all;
+    }
     error_log /var/log/nginx/nginx_error.log;
     access_log /var/log/nginx/nginx_access.log;
 
