--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,20 @@
 version: '3.5'
 services:
+  https-portal:
+    container_name: ssl
+    image: steveltn/https-portal:1
+    depends_on:
+        - php
+    ports:
+        - 80:80
+        - 443:443
+    restart: always
+    volumes:
+        - ./ssl_certs:/var/lib/https-portal
+    environment:
+        DOMAINS: 'test.lucaspintos.tech -> http://34.230.185.184:8080 #production'
   php:
-    container_name: php-apache
+    container_name: php
     build:
       context: ./
     ports: 
