--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,15 @@ services:
     volumes:
         - ./ssl_certs:/var/lib/https-portal
     environment:
-        DOMAINS: 'tareas.lucaspintos.tech -> http://34.230.185.184:8080 #production'
+        DOMAINS: 'tareas.lucaspintos.tech -> http://54.221.169.122:8080 #production'
 
   php:
     container_name: php
     image: lucaspintos909/php-mvc
     ports:
       - 8080:80
-    #volumes:
+    volumes:
+      - ./src/.env:/var/www/html/.env
     #  - ./src:/var/www/html
     depends_on:
       - db
@@ -41,7 +42,7 @@ services:
       - ./setup.sql:/docker-entrypoint-initdb.d/setup.sql # Archivo para inicializar la creacion de las tablas y base de datos
     networks:
       - docker-net
-      -
+
   watchtower:
     image: containrrr/watchtower
     volumes:
