[REFACTOR] Nombre de contendor de watchtower

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.5'
 services:
-  https-portal:
-    container_name: ssl
-    image: steveltn/https-portal:1
-    depends_on:
-        - php
-    ports:
-        - 80:80
-        - 443:443
-    restart: always
-    volumes:
-        - ./ssl_certs:/var/lib/https-portal
-    environment:
-        DOMAINS: 'tareas.lucaspintos.tech -> http://54.221.169.122:8080 #production'
+  #https-portal:
+  #  container_name: ssl
+  #  image: steveltn/https-portal:1
+  #  depends_on:
+  #      - php
+  #  ports:
+  #      - 80:80
+  #      - 443:443
+  #  restart: always
+  # volumes:
+  #     - ./ssl_certs:/var/lib/https-portal
+  #  environment:
+  #      DOMAINS: 'tareas.lucaspintos.tech -> http://54.221.169.122:8080 #production'
 
   php:
     container_name: php
@@ -44,6 +44,7 @@ services:
       - docker-net
 
   watchtower:
+    container_name: watchtower
     image: containrrr/watchtower
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
