--- a/deploy-files/Dockerfile
+++ b/deploy-files/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:8.0.3-apache
-COPY ./src /var/www/html
+COPY ../src /var/www/html
 RUN apt-get update && \
     docker-php-ext-install -j$(nproc) pdo && \
     docker-php-ext-install -j$(nproc) pdo_mysql
